# Multi-agent-stock-analysis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp.json  pyproject.toml
backend/: main.py  mcp_server.py
backend/api/: routes.py
backend/config/: settings.py
backend/crew/: llm_config.py
backend/middleware/: rate_limiter.py
backend/models/: outputs.py  schemas.py
backend/orchestrator/: mcp_orchestrator.py  orchestrator.py  query_analyzer.py
backend/tools/: entity_extraction.py  risk_analysis.py  sentiment_analysis.py  stock_data.py  tavily_search.py  ticker_lookup.py  utils.py
docs/: AGENTS.md  API.md  MCP_ARCHITECTURE.md  TOOLS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ResearchForm.tsx  ResearchResult.tsx
frontend/src/utils/: pdfExport.ts
reports/: AAPL_research_report.md  nvda_report_2026-02-21.md
tests/: test_mcp.py
