[project]
name = "stock-research-agent"
version = "2.0.0"
description = "AI-powered stock research agent using CrewAI, MCP (Model Context Protocol), and Nvidia NIM"
requires-python = ">=3.12"
dependencies = [
    # LLM & Agent Framework
    "crewai>=1.9.3",
    "crewai-tools>=1.9.3",
    "instructor>=1.12.0",
    "openai>=1.83.0",
    # Model Context Protocol (MCP) - JSON-RPC standard for AI tools
    "mcp>=1.0.0",
    "fastmcp>=0.4.1",
    # API Framework
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    # Data Validation
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    # Financial Data & Search
    "yfinance>=1.1.0",
    "tavily-python>=0.7.21",
    # Utilities
    "python-dotenv>=1.1.0",
    "litellm>=1.75.3",
    "pandas-ta>=0.3.14b",
    "apscheduler>=3.11.2",
    "fastapi-sso>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
