[project]
name = "stock-research-agent"
version = "2.0.0"
description = "AI-powered stock research agent using CrewAI, MCP (Model Context Protocol), and Nvidia NIM"
requires-python = ">=3.12"
dependencies = [
    "crewai",
    "crewai-tools",
    "instructor",
    "openai",
    "mcp",
    "fastmcp",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "yfinance",
    "tavily-python",
    "python-dotenv",
    "litellm>=1.81",
    "tokenizers>=0.21",
    "apscheduler",
    "fastapi-sso",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
